--- a/TEL_Web_App/Views/Users/LeaveApplication.cshtml
+++ b/TEL_Web_App/Views/Users/LeaveApplication.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TEL_Web_App.Models.Employee
+@model TEL_Web_App.Models.User
 
 @{
     ViewBag.Title = "LeaveApplication";
@@ -43,7 +44,7 @@
                 <td><label>Strat Date</label></td>
                 <td>
                     <div class="input-group date" data-provide="datepicker" id="datepicker">
-                        <input type='text' class="form-control" id="startDate"/>
+                       <input type='text' class="form-control" id="startDate"/>
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-calendar">
                             </span>
