Log Out Option added to leave application

--- a/TEL_Web_App/Views/Shared/_Layout.cshtml
+++ b/TEL_Web_App/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
         $(document).ready(function () {
             $('#example').DataTable();
            $('#datepicker').datetimepicker({
-               format: 'mm/dd/yyyy'
+               format: "DD-MM-YYYY"
            });
         });
     </script>
